Prepresenation code commit, will add documentation and website after presentaion.
Includes all code to get to a working state

--- a/src/cpp/arduino/EmbeddedDevice/platformio.ini
+++ b/src/cpp/arduino/EmbeddedDevice/platformio.ini
@@ -16,6 +16,9 @@ framework = arduino
 ; Exclude old toggle.cpp from build (we're using main.cpp now)
 build_src_filter = +<main.cpp> -<toggle.cpp>
 
+; To enable latency and time sync testing features, uncomment the line below:
+build_flags = -DENABLE_LATENCY_TEST
+
 lib_deps = 
     bblanchon/ArduinoJson@^7.4.2
 
