--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies for BeatNet (editable install)
 -e ./BeatNet
 -e ./madmom
+-e ./essentia
 
 # Audio processing dependencies (BeatNet handles specific versions)
 librosa>=0.8.0
@@ -16,6 +17,7 @@ numpy>=1.21.0
 scipy>=1.7.0
 numba>=0.60.0  # Updated for Python 3.13 compatibility
 cython>=0.29.0
+pandas>=1.4.0
 
 # Visualization
 matplotlib>=3.5.0
@@ -29,16 +31,20 @@ jupyter>=1.0.0
 
 # Additional useful packages
 tqdm>=4.64.0
-pandas>=1.4.0
 mido>=1.2.6  # Required by BeatNet for MIDI file handling
 
-# Other dependencies
-vispy
-PyQt6  # GUI backend for Vispy
+# Communication protocols
+pyzmq>=25.0.0  # ZeroMQ for C++ pipeline communication
+paho-mqtt>=1.6.0  # MQTT for Arduino integration
+ntplib>=0.4.0  # NTP time synchronization
 
-# MQTT and time synchronization for Arduino integration
-paho-mqtt>=1.6.0
-ntplib>=0.4.0
+# Audio source separation (optional, for ground truth generation)
+demucs>=4.0.0  # Audio source separation (used in kick_only_gt_demucs.py)
+soundfile>=0.12.0  # Audio file I/O (used with demucs)
+
+# Visualization
+vispy>=0.13.0
+PyQt6>=6.0.0  # GUI backend for Vispy
 
 # Note: BeatNet's setup.py handles its own specific dependency versions
 # The editable install (-e ./BeatNet) will automatically install:
